--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,16 @@
 
 .item-img{
   width: 400px;
+  height: 300px;
 }
 
 .main{
   display: flex;
   justify-content: center;
 }
+
+.win { border: 10px solid green; color:green}
+
+.lose { border: 10px solid red; color:red}
+
+.tie { border: 10px solid black; color:black}
