--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "SongMyung-Regular";
+  font-weight: normal;
+  src: url("./fonts/SongMyung-Regular.ttf") format("truetype");
+}
+
+body {
+  font-family: "SongMyung-Regular";
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
